--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,15 @@
+blinker==1.4
 click==6.7
+DateTime==4.2
 Flask==0.12.2
+Flask-DebugToolbar==0.10.1
+Flask-SQLAlchemy==2.2
 itsdangerous==0.24
 Jinja2==2.9.6
 MarkupSafe==1.0
 pkg-resources==0.0.0
+psycopg2==2.7.3.1
+pytz==2017.2
+SQLAlchemy==1.1.14
 Werkzeug==0.12.2
+zope.interface==4.4.3
