--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ Flask==0.12.2
 Flask-DebugToolbar==0.10.1
 Flask-SQLAlchemy==2.2
 functools32==3.2.3.post2
+gviz-api==1.9.0
 idna==2.6
 ipython==5.5.0
 ipython-genutils==0.2.0
