Have plotly graph plotting treatment on second Y axis.  May want to see if I can reset the range for that manually, but data is graphing correctly.  Now looking at how to add moonphase to graph.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+astral==1.4
 backports.shutil-get-terminal-size==1.0.0
 blinker==1.4
 certifi==2017.7.27.1
@@ -25,6 +26,7 @@ pexpect==4.2.1
 pickleshare==0.7.4
 pkg-resources==0.0.0
 plotly==2.0.15
+pprint==0.1
 prompt-toolkit==1.0.15
 psycopg2==2.7.3.1
 ptyprocess==0.5.2
