--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,9 @@
 env/
 *.pyc
 secrets.ssh
+fake_treatment_entries
+helper-copy.py
+plotly_graph.js
+seed_data/fake_treatment_entries
+seed_data/moonphase.py
+
