--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,12 @@
 astral==1.4
 backports.shutil-get-terminal-size==1.0.0
+beautifulsoup4==4.6.0
 blinker==1.4
+bs4==0.0.1
 certifi==2017.7.27.1
 chardet==3.0.4
 click==6.7
+coverage==4.4.1
 DateTime==4.2
 decorator==4.1.2
 enum34==1.1.6
